--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -2,7 +2,7 @@ html,
 body,
 #carousel,
 #carousel .carousel-inner,
-#carousel .carousel-inner .item {
+#carousel .carousel-inner .carousel-item {
   height: 100%;
   font-family: "ff-din-web", sans-serif;
 }
@@ -15,7 +15,7 @@ body {
   background-color: #222;
 }
 
-#carousel .carousel-inner .item {
+#carousel .carousel-inner .carousel-item {
   min-height: 100%;
   min-width: 100%;
   height: 100%;
@@ -41,4 +41,3 @@ body {
 #contact h1 {
   font-size: 1.2em;
 }
-
